--- a/core/src/main/resources/static/styles/login.scss
+++ b/core/src/main/resources/static/styles/login.scss
@@ -1,9 +1,51 @@
 .login-background {
   background: url('/image/background.jpeg');
-  background-size: 100% auto;
-  //background-size: 100vw 100vh;
+  background-size: cover;
+  width: 100vw;
+  height: 100vh;
+}
+
+.login-container {
+  text-align: center;
+  height: 100vh;
+  display:flex;
+  justify-content:center;
+  align-items:center;
 }
 
 .login-div {
-  text-align: center;
+  width: 300px;
+  padding: 25px;
+  border-radius: 5px;
+  background: #002;
+}
+
+.white-text {
+  color: white;
+}
+
+.bold {
+  font-weight: bold;
+}
+
+.login-section {
+  padding: 10px 0 5px 0;
+}
+
+.signup-section {
+  border: 1px solid whitesmoke;
+  border-width: 1px 0 0 0;
+}
+
+.animate-show {
+  -webkit-transition:all linear 0.5s;
+  -moz-transition:all linear 0.5s;
+  -o-transition:all linear 0.5s;
+  transition:all linear 0.5s;
+
+  opacity:1;
+}
+
+.animate-show.ng-hide {
+  opacity:0;
 }
